Update jbossReinicio.sh